--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,16 +11,25 @@
     tools:context=".LoginActivity">
 
     <TextView
+        android:id="@+id/tvDco"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:text="@string/d_c_o" />
 
     <TextView
+        android:id="@+id/tvSunlife"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:text="@string/s_u_n_l_i_f_e" />
+
+    <ImageView
+        android:id="@+id/imgvSunlife"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/sunlife" />
 
 
     <EditText
