--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,8 +7,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="20dp"
-    android:layout_marginTop="25dp"
     tools:context=".RegisterActivity">
+
+<!--    Register Judul -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="10dp"
+        android:text="@string/register_account" />
 
 <!--    Nama-->
     <LinearLayout
@@ -118,6 +127,27 @@
 
     </LinearLayout>
 
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Email" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="4"
+            android:hint="Masukan Email"
+            android:inputType="textEmailAddress" />
+
+    </LinearLayout>
+
 <!--    Alamat-->
     <LinearLayout
 
@@ -161,7 +191,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:text="@string/saya_menyetujui_atas_syarat_ketentuan" />
-
 
     </LinearLayout>
 
